--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.25.3",
     "debug": "^4.3.4",
     "disqus-react": "^1.1.3",
+    "hexo-post-parser": "file:../hexo-post-parser",
     "moment-timezone": "^0.5.37",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "persistent-cache": "github:dimaslanjaka/persistent-cache#improve2",
