--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,14 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "strictNullChecks": false,
+    "isolatedModules": false,
     "allowUnreachableCode": true,
     "noImplicitAny": false,
     "noEmit": false,
