--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "outDir": "dist",
     "jsx": "react-jsx"
   },
-  "include": ["./src", "./*.json", "./*.ts", "snapshot3.js"],
+  "include": ["./src", "./*.json", "./*.ts", "./*.js", "./*.tsx"],
   "typeAcquisition": { "enable": true },
   "exclude": ["**/node_modules/**", "**/tmp/**", "**/build/**", "**/dist/**"]
 }
