--- a/blog/package.json
+++ b/blog/package.json
@@ -1,16 +1,31 @@
 {
-  "name": "blog",
+  "name": "chimeraland-blog",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-remote": "npm i -D https://github.com/dimaslanjaka/static-blog-generator/raw/master/release/development.tgz https://github.com/dimaslanjaka/hexo-post-parser.git",
+    "dev-local": "npm i -D file:../../hexo-post-parser file:../../static-blog-generator"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "hexo": "^6.3.0",
-    "hexo-server": "^3.0.0"
+    "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-category": "^1.0.0",
+    "hexo-generator-index": "^2.0.0",
+    "hexo-generator-tag": "^1.0.0",
+    "hexo-server": "^3.0.0",
+    "moment-timezone": "^0.5.37"
+  },
+  "devDependencies": {
+    "@types/hexo": "^3.8.8",
+    "@types/node": "^18.8.2",
+    "depcheck": "^1.4.3",
+    "eslint": "^8.24.0",
+    "hexo-post-parser": "file:../../hexo-post-parser",
+    "npm-check-updates": "^16.3.8",
+    "static-blog-generator": "file:../../static-blog-generator"
   }
 }
