--- a/blog/packages/hexo-renderer-sass/package.json
+++ b/blog/packages/hexo-renderer-sass/package.json
@@ -23,6 +23,7 @@
     "node": ">= 6"
   },
   "dependencies": {
+    "deepmerge-ts": "^4.2.2",
     "node-sass": "^7.0.3"
   },
   "peerDependencies": {
