--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.14",
     "@types/gtag.js": "^0.0.11",
+    "@types/gulp": "^4.0.9",
     "@types/jsdom": "^20.0.0",
     "@types/moment-timezone": "^0.5.30",
     "@types/react": "^18.0.21",
@@ -86,6 +87,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
     "express": "^4.18.1",
+    "gulp": "^4.0.2",
+    "hexo-post-parser": "github:dimaslanjaka/hexo-post-parser",
     "jsdom": "^20.0.1",
     "nodemon": "^2.0.20",
     "npm-check-updates": "^16.3.7",
