fixed hexo subfolder

--- a/blog/.vscode/settings.json
+++ b/blog/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "editor.codeActionsOnSave": {
-    "source.organizeImports": false
+    "source.organizeImports": true
   },
   "files.exclude": {
     "**/node_modules": true
