--- a/blog/package.json
+++ b/blog/package.json
@@ -6,14 +6,15 @@
     "version": "6.3.0"
   },
   "scripts": {
-    "dev-remote": "npm i -D https://github.com/dimaslanjaka/static-blog-generator/raw/master/release/development.tgz https://github.com/dimaslanjaka/hexo-post-parser.git",
-    "dev-local": "npm i -D file:../../hexo-post-parser file:../../static-blog-generator",
-    "prod-local": "npm i file:../../hexo-adsense",
-    "prod-server": "npm i https://github.com/dimaslanjaka/hexo-adsense.git",
+    "dev-remote": "npm i -D https://github.com/dimaslanjaka/static-blog-generator/raw/master/release/development.tgz https://github.com/dimaslanjaka/hexo-post-parser.git https://gitpkg.now.sh/dimaslanjaka/static-blog-generator-hexo/packages/gulp-dom?master",
+    "dev-local": "npm i -D file:../../hexo-post-parser file:../../static-blog-generator file:../../static-blog-generator-hexo/packages/gulp-dom",
+    "prod-local": "npm i file:../../hexo-adsense file:../../safelink",
+    "prod-server": "npm i https://github.com/dimaslanjaka/hexo-adsense.git https://github.com/dimaslanjaka/safelink.git https://github.com/dimaslanjaka/safelink.git",
     "ilocal": "npm run un && npm run dev-local && npm run prod-local",
-    "un": "npm un static-blog-generator hexo-post-parser hexo-adsense",
+    "un": "npm un static-blog-generator hexo-post-parser hexo-adsense safelinkify gulp-dom",
     "server": "hexo server -p 4000",
-    "serve": "hexo server -p 4000"
+    "serve": "hexo server -p 4000",
+    "copy": "sbg copy --nocache"
   },
   "dependencies": {
     "hexo": "^6.3.0",
@@ -24,6 +25,8 @@
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-json-content": "^4.2.3",
+    "hexo-generator-redirect": "github:dimaslanjaka/hexo-generator-redirect",
+    "hexo-generator-searchdb": "^1.4.0",
     "hexo-generator-sitemap": "3.0.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-inject": "^1.0.0",
@@ -35,10 +38,15 @@
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-tag-markdown": "^1.0.8",
-    "hexo-theme-next": "file:themes/next"
+    "hexo-theme-next": "file:themes/next",
+    "safelinkify": "file:../../safelink"
   },
   "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-dom": "file:../../static-blog-generator-hexo/packages/gulp-dom",
     "hexo-post-parser": "file:../../hexo-post-parser",
-    "static-blog-generator": "file:../../static-blog-generator"
+    "static-blog-generator": "file:../../static-blog-generator",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
