--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.1.0",
     "@types/node": "^18.7.23",
+    "ansi-colors": "^4.1.3",
     "article-parser": "^7.2.4",
     "axios": "^0.27.2",
     "bluebird": "^3.7.2",
@@ -77,7 +78,6 @@
     "@types/sharp": "^0.31.0",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
-    "ansi-colors": "^4.1.3",
     "cross-env": "^7.0.3",
     "depcheck": "^1.4.3",
     "eslint": "^8.24.0",
@@ -88,6 +88,7 @@
     "eslint-plugin-react": "^7.31.8",
     "express": "^4.18.1",
     "gulp": "^4.0.2",
+    "gulp-dom": "https://gitpkg.now.sh/dimaslanjaka/static-blog-generator-hexo/packages/gulp-dom?master",
     "hexo-post-parser": "github:dimaslanjaka/hexo-post-parser",
     "jsdom": "^20.0.1",
     "nodemon": "^2.0.20",
@@ -98,6 +99,7 @@
     "puppeteer": "^18.0.5",
     "react-scripts": "^5.0.1",
     "rimraf": "^3.0.2",
+    "safelinkify": "file:../safelink",
     "sass": "^1.55.0",
     "typescript": "^4.8.4"
   }
