--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^18.7.23",
     "ansi-colors": "^4.1.3",
     "article-parser": "^7.2.4",
+    "await-spawn": "file:../await-spawn",
     "axios": "^0.27.2",
     "bluebird": "^3.7.2",
     "bootstrap": "^5.2.1",
@@ -87,6 +88,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
     "express": "^4.18.1",
+    "git-command-helper": "file:../git-command-helper",
     "gulp": "^4.0.2",
     "gulp-dom": "https://gitpkg.now.sh/dimaslanjaka/static-blog-generator-hexo/packages/gulp-dom?master",
     "hexo-post-parser": "github:dimaslanjaka/hexo-post-parser",
