--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,13 @@
   },
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
+    "checkJs": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -25,8 +30,16 @@
     "outDir": "dist",
     "jsx": "react-jsx"
   },
-  "include": ["./src", "./*.json", "./*.ts", "./*.js", "./*.tsx"],
-  "typeAcquisition": { "enable": true },
+  "include": [
+    "./src",
+    "./*.json",
+    "./*.ts",
+    "./*.js",
+    "./*.tsx"
+  ],
+  "typeAcquisition": {
+    "enable": true
+  },
   "exclude": [
     "**/node_modules/**",
     "**/tmp/**",
