--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://www.webmanajemen.com/chimeraland/",
+  "repository": {
+    "url": "https://github.com/dimaslanjaka/chimeraland.git",
+    "type": "git"
+  },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -71,6 +75,7 @@
     "@types/core-js": "^2.5.5",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.14",
+    "@types/gh-pages": "^3.2.1",
     "@types/gtag.js": "^0.0.11",
     "@types/gulp": "^4.0.9",
     "@types/jsdom": "^20.0.0",
@@ -90,6 +95,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
     "express": "^4.18.1",
+    "gh-pages": "^4.0.0",
     "git-command-helper": "file:../git-command-helper",
     "gulp": "^4.0.2",
     "gulp-dom": "https://gitpkg.now.sh/dimaslanjaka/static-blog-generator-hexo/packages/gulp-dom?master",
