--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bluebird": "^3.7.2",
     "bootstrap": "^5.2.1",
     "core-js": "^3.25.3",
+    "crypto-js": "^4.1.1",
     "debug": "^4.3.4",
     "disqus-react": "^1.1.3",
     "glob": "^8.0.3",
@@ -73,6 +74,7 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.37",
     "@types/core-js": "^2.5.5",
+    "@types/crypto-js": "^4.1.1",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.14",
     "@types/gh-pages": "^3.2.1",
