--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "scripts": {
     "start": "cross-env-shell NODE_ENV=development PORT=4000 BROWSER=none DEBUG=chimera* react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "cross-env-shell NODE_ENV=production PORT=4000 BROWSER=none DEBUG=chimera* ts-node ssg.ts && gulp deploy",
+    "post-build": "cross-env-shell NODE_ENV=production PORT=4000 BROWSER=none DEBUG=chimera* ts-node ssg.ts && gulp deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "npx serve -s build -l 4000",
