--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "react-router-dom": "^6.4.2",
     "sharp": "^0.31.1",
     "slugify": "^1.6.5",
+    "source-map-explorer": "^2.5.3",
     "upath": "^2.0.1",
     "web-vitals": "^3.0.3"
   },
   "scripts": {
+    "analyze": "npx source-map-explorer 'build/static/js/*.js'",
     "start": "cross-env-shell NODE_ENV=development PORT=4000 BROWSER=none DEBUG=chimera* react-scripts start",
     "build": "react-scripts build",
     "post-build": "cross-env-shell NODE_ENV=production PORT=4000 BROWSER=none DEBUG=chimera* ts-node ssg.ts && gulp deploy",
