--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "rimraf": "^3.0.2",
     "safelinkify": "file:../safelink",
     "sass": "^1.55.0",
+    "through2": "^4.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
