--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,5 +67,7 @@
     "javascriptreact",
     "javascript",
     "typescript"
-  ]
+  ],
+  "eslint.run": "onSave",
+  "eslint.useESLintClass": true
 }
