--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "crypto-js": "^4.1.1",
     "debug": "^4.3.4",
     "disqus-react": "^1.1.5",
+    "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
     "moment-timezone": "^0.5.37",
     "persistent-cache": "file:../persistent-cache",
@@ -79,6 +80,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.14",
+    "@types/fs-extra": "^9.0.13",
     "@types/gh-pages": "^3.2.1",
     "@types/gtag.js": "^0.0.12",
     "@types/gulp": "^4.0.9",
@@ -111,7 +113,7 @@
     "prerender-chrome-headless": "file:packages/prerender-chrome-headless",
     "prettier": "^2.7.1",
     "puppeteer": "^18.2.1",
-    "react-prerender-it": "file:packages/react-prerender-it",
+    "react-prerender-it": "github:dimaslanjaka/react-prerender-it",
     "react-scripts": "^5.0.1",
     "rimraf": "^3.0.2",
     "safelinkify": "file:../safelink",
