--- a/package.json
+++ b/package.json
@@ -7,6 +7,21 @@
     "url": "https://github.com/dimaslanjaka/chimeraland.git",
     "type": "git"
   },
+  "scripts": {
+    "analyze": "npx source-map-explorer 'build/static/js/*.js'",
+    "start": "cross-env-shell NODE_ENV=development PORT=4000 DISABLE_ESLINT_PLUGIN=true BROWSER=none DEBUG=chimera* react-scripts start",
+    "build": "cross-env-shell DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "post-build": "cross-env-shell NODE_ENV=production PORT=4000 BROWSER=none DEBUG=chimera* ts-node ssg.ts && gulp deploy",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "serve": "npx serve -s build -l 4000",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
+    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc.js",
+    "update": "npx npm-check-updates -u -x chalk",
+    "ssr": "nodemon --exec \"ts-node ssr.tsx\" -e \"tsx\" --ignore node_modules",
+    "refresh": "npm update git-command-helper hexo-post-parser safelinkify gulp-dom"
+  },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -40,21 +55,6 @@
     "source-map-explorer": "^2.5.3",
     "upath": "^2.0.1",
     "web-vitals": "^3.0.3"
-  },
-  "scripts": {
-    "analyze": "npx source-map-explorer 'build/static/js/*.js'",
-    "start": "cross-env-shell NODE_ENV=development PORT=4000 BROWSER=none DEBUG=chimera* react-scripts start",
-    "build": "react-scripts build",
-    "post-build": "cross-env-shell NODE_ENV=production PORT=4000 BROWSER=none DEBUG=chimera* ts-node ssg.ts && gulp deploy",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "serve": "npx serve -s build -l 4000",
-    "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
-    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc.js",
-    "update": "npx npm-check-updates -u -x chalk",
-    "ssr": "nodemon --exec \"ts-node ssr.tsx\" -e \"tsx\" --ignore node_modules",
-    "refresh": "npm update git-command-helper hexo-post-parser safelinkify gulp-dom"
   },
   "eslintConfig": {
     "extends": [
