--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "analyze": "npx source-map-explorer 'build/static/js/*.js'",
     "start": "cross-env-shell NODE_ENV=development PORT=4000 DISABLE_ESLINT_PLUGIN=true BROWSER=none DEBUG=chimera* react-scripts start",
     "build": "cross-env-shell DISABLE_ESLINT_PLUGIN=true react-scripts build",
-    "post-build": "cross-env-shell NODE_ENV=production PORT=4000 BROWSER=none DEBUG=chimera* ts-node ssg.ts && gulp deploy",
+    "predeploy": "npm run build",
+    "deploy": "cross-env-shell NODE_ENV=production PORT=4000 BROWSER=none DEBUG=chimera*,prerender-it* gulp clean && gulp snap && gulp copy && gulp safelink",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "npx serve -s build -l 4000",
