--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "cross-env-shell NODE_ENV=development PORT=4000 DISABLE_ESLINT_PLUGIN=true BROWSER=none DEBUG=chimera* react-scripts start",
     "build": "cross-env-shell DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "cross-env-shell NODE_ENV=production PORT=4000 BROWSER=none DEBUG=chimera*,prerender-it* gulp clean && gulp copy && gulp snap && gulp copy && gulp safelink",
+    "deploy": "cross-env-shell NODE_ENV=production PORT=4000 BROWSER=none DEBUG=chimera*,prerender-it* gulp clean && gulp copy && gulp snap && gulp copy && gulp safelink && gulp start-deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "npx serve -s build -l 4000",
