--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc.js",
     "update": "npx npm-check-updates -u -x chalk",
     "ssr": "nodemon --exec \"ts-node ssr.tsx\" -e \"tsx\" --ignore node_modules",
-    "refresh": "npm update git-command-helper hexo-post-parser safelinkify gulp-dom"
+    "refresh": "npm update react-prerender-it git-command-helper hexo-post-parser safelinkify gulp-dom"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
@@ -91,7 +91,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.5",
     "@types/sharp": "^0.31.0",
-    "@types/through2": "github:dimaslanjaka/nodejs-package-types#through2",
+    "@types/through2": "git+https://github.com/dimaslanjaka/nodejs-package-types#through2",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "cross-env": "^7.0.3",
@@ -104,20 +104,18 @@
     "eslint-plugin-react": "^7.31.10",
     "express": "^4.18.2",
     "gh-pages": "^4.0.0",
-    "git-command-helper": "file:../git-command-helper",
+    "git-command-helper": "git+https://github.com/dimaslanjaka/git-command-helper.git",
     "gulp": "^4.0.2",
-    "gulp-dom": "https://gitpkg.now.sh/dimaslanjaka/static-blog-generator-hexo/packages/gulp-dom?master",
     "jsdom": "^20.0.1",
     "nodemon": "^2.0.20",
     "npm-check-updates": "^16.3.11",
     "npm-run-all": "^4.1.5",
-    "prerender-chrome-headless": "file:packages/prerender-chrome-headless",
     "prettier": "^2.7.1",
     "puppeteer": "^18.2.1",
-    "react-prerender-it": "github:dimaslanjaka/react-prerender-it",
+    "react-prerender-it": "git+https://github.com/dimaslanjaka/react-prerender-it.git",
     "react-scripts": "^5.0.1",
     "rimraf": "^3.0.2",
-    "safelinkify": "file:../safelink",
+    "safelinkify": "git+https://github.com/dimaslanjaka/safelink.git",
     "sass": "^1.55.0",
     "through2": "^4.0.2",
     "ts-node": "^10.9.1",
