--- a/blog/package.json
+++ b/blog/package.json
@@ -18,6 +18,9 @@
     "build": "hexo generate && gulp safelink"
   },
   "dependencies": {
+    "ansi-colors": "^4.1.3",
+    "bluebird": "^3.7.2",
+    "debug": "^4.3.4",
     "hexo": "^6.3.0",
     "hexo-admin": "^2.3.0",
     "hexo-adsense": "file:../../hexo-adsense",
@@ -36,7 +39,8 @@
     "hexo-server": "^3.0.0",
     "hexo-tag-markdown": "^1.0.8",
     "hexo-theme-next": "file:themes/next",
-    "safelinkify": "file:../../safelink"
+    "safelinkify": "file:../../safelink",
+    "upath": "^2.0.1"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
