--- a/blog/.vscode/settings.json
+++ b/blog/.vscode/settings.json
@@ -4,5 +4,7 @@
   },
   "files.exclude": {
     "**/node_modules": true
-  }
+  },
+  "code-runner.runInTerminal": true,
+  "code-runner.clearPreviousOutput": true
 }
