--- a/blog/package.json
+++ b/blog/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "ansi-colors": "^4.1.3",
+    "axios": "^1.1.3",
     "bluebird": "^3.7.2",
     "debug": "^4.3.4",
     "hexo": "^6.3.0",
