--- a/blog/themes/next/package.json
+++ b/blog/themes/next/package.json
@@ -41,5 +41,11 @@
     "js-yaml": "4.1.0",
     "mocha": "10.0.0",
     "stylint": "2.0.0"
+  },
+  "dependencies": {
+    "css": "^3.0.0",
+    "hexo-renderer-nunjucks": "^2.0.0",
+    "hexo-renderer-stylus": "^2.1.0",
+    "hexo-util": "^2.7.0"
   }
 }
