--- a/blog/package.json
+++ b/blog/package.json
@@ -15,7 +15,8 @@
     "server": "hexo server -p 4000",
     "serve": "hexo server -p 4000",
     "copy": "sbg copy --nocache",
-    "build": "hexo generate && gulp safelink"
+    "build": "hexo generate && gulp safelink",
+    "update": "npx npm-check-updates -u -x hexo && npm update safelinkify hexo-generator-redirect"
   },
   "dependencies": {
     "ansi-colors": "^4.1.3",
@@ -23,22 +24,15 @@
     "bluebird": "^3.7.2",
     "debug": "^4.3.4",
     "hexo": "^6.3.0",
-    "hexo-admin": "^2.3.0",
     "hexo-adsense": "file:../../hexo-adsense",
-    "hexo-deployer-git": "^3.0.0",
-    "hexo-generator-archive": "^1.0.0",
-    "hexo-generator-category": "^1.0.0",
-    "hexo-generator-index": "^2.0.0",
-    "hexo-generator-json-content": "^4.2.3",
+    "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-category": "^2.0.0",
+    "hexo-generator-index": "^3.0.0",
     "hexo-generator-redirect": "github:dimaslanjaka/hexo-generator-redirect",
     "hexo-generator-sitemap": "3.0.1",
-    "hexo-generator-tag": "^1.0.0",
-    "hexo-inject": "^1.0.0",
-    "hexo-math": "^4.0.0",
+    "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-markdown-it": "^6.1.0",
-    "hexo-renderer-mathjax": "^0.6.0",
     "hexo-server": "^3.0.0",
-    "hexo-tag-markdown": "^1.0.8",
     "hexo-theme-next": "file:themes/next",
     "safelinkify": "file:../../safelink",
     "sharp": "^0.31.1",
