--- a/blog/package.json
+++ b/blog/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "start": "npm run serve",
+    "clean": "hexo clean",
     "server": "hexo server -p 4000",
     "serve": "hexo server -p 4000",
     "copy": "sbg copy --nocache",
@@ -24,7 +25,6 @@
     "bluebird": "^3.7.2",
     "debug": "^4.3.4",
     "hexo": "^6.3.0",
-    "hexo-adsense": "file:../../hexo-adsense",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^3.0.0",
@@ -34,14 +34,17 @@
     "hexo-renderer-markdown-it": "^6.1.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-next": "file:themes/next",
+    "js-yaml": "^4.1.0",
     "safelinkify": "file:../../safelink",
     "sharp": "^0.31.1",
     "upath": "^2.0.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "gulp": "^4.0.2",
     "gulp-dom": "file:../../static-blog-generator-hexo/packages/gulp-dom",
     "hexo-post-parser": "file:../../hexo-post-parser",
+    "npm-run-all": "^4.1.5",
     "static-blog-generator": "file:../../static-blog-generator",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
