--- a/blog/package.json
+++ b/blog/package.json
@@ -23,8 +23,10 @@
     "ansi-colors": "^4.1.3",
     "axios": "^1.1.3",
     "bluebird": "^3.7.2",
+    "css": "^3.0.0",
     "debug": "^4.3.4",
-    "hexo": "^6.3.0",
+    "hexo": "github:hexojs/hexo",
+    "hexo-adsense": "^1.0.26",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^3.0.0",
@@ -32,9 +34,11 @@
     "hexo-generator-sitemap": "3.0.1",
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-markdown-it": "^6.1.0",
+    "hexo-renderer-stylus": "github:hexojs/hexo-renderer-stylus",
     "hexo-server": "^3.0.0",
-    "hexo-theme-next": "file:themes/next",
+    "hexo-theme-next": "^8.13.1",
     "js-yaml": "^4.1.0",
+    "markdown-it-abbr": "^1.0.4",
     "safelinkify": "file:../../safelink",
     "sharp": "^0.31.1",
     "upath": "^2.0.1"
