--- a/blog/package.json
+++ b/blog/package.json
@@ -25,11 +25,14 @@
     "bluebird": "^3.7.2",
     "css": "^3.0.0",
     "debug": "^4.3.4",
+    "front-matter": "^4.0.2",
     "hexo": "github:hexojs/hexo",
+    "hexo-browsersync": "github:hexojs/hexo-browsersync",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-redirect": "github:dimaslanjaka/hexo-generator-redirect",
+    "hexo-generator-searchdb": "^1.4.0",
     "hexo-generator-sitemap": "3.0.1",
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-markdown-it": "^6.1.0",
@@ -38,11 +41,17 @@
     "hexo-theme-next": "^8.13.1",
     "js-yaml": "^4.1.0",
     "markdown-it-abbr": "^1.0.4",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.38",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "safelinkify": "file:../../safelink",
     "sharp": "^0.31.1",
-    "upath": "^2.0.1"
+    "upath": "^2.0.1",
+    "yaml": "^2.1.3"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
     "cross-env": "^7.0.3",
     "gulp": "^4.0.2",
     "gulp-dom": "file:../../static-blog-generator-hexo/packages/gulp-dom",
