--- a/blog/.vscode/settings.json
+++ b/blog/.vscode/settings.json
@@ -7,5 +7,11 @@
   },
   "editor.formatOnSave": false,
   "code-runner.runInTerminal": true,
-  "code-runner.clearPreviousOutput": true
+  "code-runner.clearPreviousOutput": true,
+  "code-runner.saveAllFilesBeforeRun": true,
+  "code-runner.executorMap": {
+    "typescript": "cross-env-shell DEBUG=chimera-* ts-node",
+    "typescriptreact": "cross-env-shell DEBUG=chimera-* ts-node"
+  },
+  "code-runner.respectShebang": true,
 }
