--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "moment-timezone": "^0.5.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "safelinkify": "file:../../safelink",
     "sharp": "^0.31.1",
     "upath": "^2.0.1",
     "yaml": "^2.1.3"
@@ -55,10 +54,11 @@
     "cross-env": "^7.0.3",
     "git-command-helper": "^1.0.8",
     "gulp": "^4.0.2",
-    "gulp-dom": "file:../../static-blog-generator-hexo/packages/gulp-dom",
-    "hexo-post-parser": "file:../../hexo-post-parser",
+    "gulp-dom": "https://gitpkg.now.sh/dimaslanjaka/static-blog-generator-hexo/packages/gulp-dom?master",
+    "hexo-post-parser": "file:../hexo-post-parser",
     "npm-run-all": "^4.1.5",
-    "static-blog-generator": "file:../../static-blog-generator",
+    "safelinkify": "^1.1.4",
+    "static-blog-generator": "file:../static-blog-generator",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
