--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "server": "hexo server -p 4000",
     "serve": "hexo server -p 4000",
     "copy": "sbg copy --nocache",
-    "build": "hexo generate && gulp safelink",
+    "build": "hexo generate",
+    "postbuild": "gulp safelink && gulp copy",
     "update": "npx npm-check-updates -u -x hexo && npm update safelinkify hexo-generator-redirect"
   },
   "dependencies": {
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
+    "@types/node": "^18.11.4",
     "cross-env": "^7.0.3",
     "git-command-helper": "^1.0.8",
     "gulp": "^4.0.2",
