--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "hexo-server": "^3.0.0",
     "hexo-theme-next": "^8.13.1",
     "imagemin": "^8.0.1",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-pngquant": "^9.0.2",
     "js-yaml": "^4.1.0",
     "markdown-it-abbr": "^1.0.4",
     "moment": "^2.29.4",
