--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hexo-site",
+  "name": "chimeraland",
   "version": "0.0.0",
   "private": true,
   "homepage": "https://www.webmanajemen.com/chimeraland/",
