--- a/packages/scraper/.vscode/settings.json
+++ b/packages/scraper/.vscode/settings.json
@@ -10,4 +10,5 @@
   },
   "code-runner.runInTerminal": true,
   "code-runner.clearPreviousOutput": true,
+  "code-runner.saveAllFilesBeforeRun": true,
 }
