--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.11.7",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
@@ -20,6 +21,9 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "puppeteer": "^19.2.0"
+    "hexo-post-parser": "^1.1.9",
+    "puppeteer": "^19.2.0",
+    "slugify": "^1.6.5",
+    "upath": "^2.0.1"
   }
 }
