--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "hexo-theme-next": "^8.13.1",
     "js-yaml": "^4.1.0",
     "markdown-it-abbr": "^1.0.4",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.38",
     "react": "^18.2.0",
@@ -61,6 +63,7 @@
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/sharp": "^0.31.0",
     "@types/through2": "git+https://github.com/dimaslanjaka/nodejs-package-types#through2",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
