--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "hexo-renderer-stylus": "github:hexojs/hexo-renderer-stylus",
     "hexo-server": "^3.0.0",
     "hexo-theme-next": "^8.13.1",
+    "hexo-thumbnails": "^0.0.6",
     "js-yaml": "^4.1.0",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-sub": "^1.0.0",
