--- a/github-actions/package.json
+++ b/github-actions/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +18,6 @@
     "jsdom": "^21.1.0",
     "minimist": "^1.2.8",
     "yaml": "^2.2.1"
-  }
+  },
+  "packageManager": "yarn@3.4.1"
 }
