--- a/github-actions/package.json
+++ b/github-actions/package.json
@@ -17,6 +17,7 @@
     "gulp": "^4.0.2",
     "jsdom": "^21.1.0",
     "minimist": "^1.2.8",
+    "nodejs-package-types": "https://github.com/dimaslanjaka/nodejs-package-types/raw/main/release/nodejs-package-types.tgz",
     "yaml": "^2.2.1"
   },
   "packageManager": "yarn@3.4.1"
