--- a/github-actions/package.json
+++ b/github-actions/package.json
@@ -13,11 +13,10 @@
     "bluebird": "^3.7.2"
   },
   "devDependencies": {
-    "git-command-helper": "^1.1.8",
+    "git-command-helper": "https://github.com/dimaslanjaka/git-command-helper/tarball/monorepo",
     "gulp": "^4.0.2",
     "jsdom": "^21.1.0",
     "minimist": "^1.2.8",
-    "nodejs-package-types": "https://github.com/dimaslanjaka/nodejs-package-types/raw/main/release/nodejs-package-types.tgz",
     "yaml": "^2.2.1"
   },
   "packageManager": "yarn@3.4.1"
