--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -4,14 +4,7 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["master"]
-    paths:
-      [
-        "**/*.html",
-        "**/*.css",
-        "**/*.js",
-        "**/*.json",
-        ".github/workflows/install.yml",
-      ]
+    paths: ["**/*.html", "**/*.css", "**/*.js", "**/*.json"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
