--- a/github-actions/package.json
+++ b/github-actions/package.json
@@ -13,7 +13,7 @@
     "bluebird": "^3.7.2"
   },
   "devDependencies": {
-    "git-command-helper": "https://github.com/dimaslanjaka/git-command-helper/tarball/monorepo",
+    "git-command-helper": "https://github.com/dimaslanjaka/git-command-helper/raw/monorepo/release/git-command-helper.tgz",
     "gulp": "^4.0.2",
     "jsdom": "^21.1.0",
     "minimist": "^1.2.8",
