add event branch

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -3,7 +3,7 @@ name: Install Site
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
+    branches: ["master", "gh-pages"]
     paths:
       [
         "**/*.html",
