--- a/github-actions-validator.config.yml
+++ b/github-actions-validator.config.yml
@@ -1,3 +1,3 @@
 validate:
-  blacklist: blacklist-player.html
-  recipes: recipes.html
+  blacklist: "blacklist-player.html"
+  recipes: "recipes.html"
