--- a/site/multisite/chimeraland/package.json
+++ b/site/multisite/chimeraland/package.json
@@ -37,10 +37,12 @@
     "fs-extra": "^11.1.0",
     "glob": "^9.1.0",
     "googleapis": "^111.0.0",
+    "i18n": "^0.15.1",
     "js-yaml": "^4.1.0",
     "minimatch": "^7.4.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
+    "nunjucks": "^3.2.3",
     "open": "^8.4.2",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
@@ -58,8 +60,10 @@
     "@types/bluebird": "^3.5.38",
     "@types/fs-extra": "^11.0.1",
     "@types/gulp": "^4.0.10",
+    "@types/i18n": "^0.13.6",
     "@types/imagemin": "^8.0.1",
     "@types/node": "^18.14.2",
+    "@types/nunjucks": "^3.2.2",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
