--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "ansi-colors": "^4.1.3",
-    "axios": "^1.1.3",
+    "axios": "^1.3.5",
     "bluebird": "^3.7.2",
     "css": "^3.0.0",
     "debug": "^4.3.4",
@@ -32,52 +32,52 @@
     "hexo": "github:hexojs/hexo",
     "hexo-asset-link": "github:liolok/hexo-asset-link",
     "hexo-browsersync": "github:hexojs/hexo-browsersync",
-    "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "file:packages/hexo-generator-category",
+    "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-redirect": "github:dimaslanjaka/hexo-generator-redirect",
     "hexo-generator-searchdb": "^1.4.1",
-    "hexo-generator-sitemap": "3.0.1",
+    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^2.0.0",
-    "hexo-renderer-markdown-it": "^6.1.0",
+    "hexo-renderer-markdown-it": "^7.0.0",
     "hexo-renderer-stylus": "github:hexojs/hexo-renderer-stylus",
     "hexo-server": "^3.0.0",
-    "hexo-theme-next": "^8.13.1",
+    "hexo-theme-next": "^8.15.1",
     "js-yaml": "^4.1.0",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
     "moment": "^2.29.4",
-    "moment-timezone": "^0.5.40",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.31.1",
-    "slugify": "^1.6.5",
+    "sharp": "^0.32.0",
+    "slugify": "^1.6.6",
     "upath": "^2.0.1",
-    "yaml": "^2.1.3"
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
-    "@types/gulp": "^4.0.9",
-    "@types/imagemin": "^8.0.0",
+    "@types/gulp": "^4.0.10",
+    "@types/imagemin": "^8.0.1",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "^18.11.7",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@types/sharp": "^0.31.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "@types/sharp": "^0.31.1",
     "@types/through2": "git+https://github.com/dimaslanjaka/nodejs-package-types#through2",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.26.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react": "^7.32.2",
     "git-command-helper": "https://github.com/dimaslanjaka/git-command-helper/raw/monorepo/release/git-command-helper.tgz",
     "gulp": "^4.0.2",
     "gulp-dom": "https://gitpkg.now.sh/dimaslanjaka/static-blog-generator-hexo/packages/gulp-dom?master",
     "hexo-post-parser": "https://github.com/dimaslanjaka/hexo-post-parser/raw/monorepo/release/hexo-post-parser.tgz",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.7",
     "safelinkify": "https://github.com/dimaslanjaka/safelink/raw/monorepo/release/safelinkify.tgz",
     "sbg-api": "https://github.com/dimaslanjaka/static-blog-generator/raw/beta/packages/sbg-api/release/sbg-api.tgz",
     "sbg-cli": "https://github.com/dimaslanjaka/static-blog-generator/raw/beta/packages/sbg-cli/release/sbg-cli.tgz",
@@ -87,6 +87,6 @@
     "static-blog-generator": "https://github.com/dimaslanjaka/static-blog-generator/raw/beta/packages/static-blog-generator/release/static-blog-generator.tgz",
     "through2": "^4.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^5.0.3"
   }
 }
