--- a/site/multisite/chimeraland/package.json
+++ b/site/multisite/chimeraland/package.json
@@ -39,6 +39,7 @@
     "googleapis": "^114.0.0",
     "i18n": "^0.15.1",
     "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "minimatch": "^8.0.3",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
@@ -62,6 +63,7 @@
     "@types/gulp": "^4.0.10",
     "@types/i18n": "^0.13.6",
     "@types/imagemin": "^8.0.1",
+    "@types/lodash": "^4.14.192",
     "@types/node": "^18.15.11",
     "@types/nunjucks": "^3.2.2",
     "@types/prettier": "^2.7.2",
