--- a/site/multisite/chimeraland/package.json
+++ b/site/multisite/chimeraland/package.json
@@ -48,7 +48,7 @@
     "prettier": "^2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sbg-utility": "^1.0.8",
+    "sbg-utility": "https://github.com/dimaslanjaka/static-blog-generator/raw/beta/packages/sbg-utility/release/sbg-utility.tgz",
     "sharp": "^0.32.0",
     "slugify": "^1.6.6",
     "through2": "^4.0.2",
@@ -81,7 +81,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "express": "^4.18.2",
-    "git-command-helper": "^1.1.8",
+    "git-command-helper": "https://github.com/dimaslanjaka/git-command-helper/raw/monorepo/release/git-command-helper.tgz",
     "gulp": "^4.0.2",
     "gulp-dom": "https://github.com/dimaslanjaka/static-blog-generator-hexo/raw/master/packages/gulp-dom/release/gulp-dom.tgz",
     "hexo-post-parser": "^1.2.6",
@@ -89,7 +89,7 @@
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "persistent-cache": "https://github.com/dimaslanjaka/persistent-cache/raw/improve2/release/persistent-cache.tgz",
-    "safelinkify": "^1.1.17",
+    "safelinkify": "https://github.com/dimaslanjaka/safelink/raw/monorepo/release/safelinkify.tgz",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
