feat: add packer

--- a/site/multisite/chimeraland/package.json
+++ b/site/multisite/chimeraland/package.json
@@ -8,7 +8,8 @@
     "type": "git"
   },
   "files": [
-    "postinstall.js"
+    "postinstall.js",
+    "packer.js"
   ],
   "scripts": {
     "start": "node -r ts-node/register src/manager.ts",
