refactor: default formatter using eslint

--- a/site/multisite/chimeraland/.vscode/settings.json
+++ b/site/multisite/chimeraland/.vscode/settings.json
@@ -9,6 +9,7 @@
   "terminal.integrated.env.windows": {
     "PATH": "${env:PATH};${workspaceFolder}\\node_modules\\.bin;${workspaceFolder}\\bin"
   },
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
   "editor.codeActionsOnSave": {
     "source.fixAll": true,
     "source.organizeImports": true,
