refactor: disable strict mode

--- a/site/multisite/chimeraland/tsconfig.json
+++ b/site/multisite/chimeraland/tsconfig.json
@@ -9,7 +9,7 @@
     "allowJs": true,
     "checkJs": false,
     "noEmit": true,
-    "strict": true,
+    "strict": false,
     "jsx": "react-jsx",
     "lib": [
       "DOM",
